[gd_scene load_steps=11 format=3 uid="uid://bwvyar8y8lpaw"]

[ext_resource type="Script" path="res://Scripts/GameEffects/PostProcessEffects.gd" id="1_24wkp"]
[ext_resource type="Script" path="res://addons/post_processing/resource/post_processing_configuration.gd" id="2_83oct"]
[ext_resource type="Resource" uid="uid://qjkftfo6dekq" path="res://Resources/PostProcessAnims/Glitch/DefaultGlitch.tres" id="2_dep2t"]
[ext_resource type="PackedScene" uid="uid://cnnnogye3b8fs" path="res://Scenes/Gameplay/gameplay_post_process.tscn" id="2_toebk"]

[sub_resource type="Curve" id="Curve_b7wv0"]
_data = [Vector2(0, 0), 0.0, 6.36189, 0, 0, Vector2(0.487261, 0.661802), -3.75565, -3.75565, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_cyi3g"]
_data = [Vector2(0, 0), 0.0, 14.5829, 0, 0, Vector2(0.182119, 0.948138), -2.71077, -2.71077, 0, 0, Vector2(1, 0), 0.0588545, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_8cbf7"]
_data = [Vector2(0, 0), 0.0, 6.33718, 0, 0, Vector2(0.115894, 1), 0.0, 0.0, 0, 0, Vector2(0.910596, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -6.36374, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_dwdq4"]
_data = [Vector2(0, 0), 0.0, 7.26853, 0, 0, Vector2(0.107306, 0.910345), 1.29174, 1.29174, 0, 0, Vector2(0.353881, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0307344, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_vb36e"]
_data = [Vector2(0, 0.025), 0.0, 6.01441, 0, 0, Vector2(0.289954, 0.98319), -1.50404, -1.50404, 0, 0, Vector2(0.381279, 0.305172), 0.0, 0.0, 0, 0, Vector2(0.497717, 0.848707), 0.0, 0.0, 0, 0, Vector2(0.611872, 0.226724), 0.0, 0.0, 0, 0, Vector2(0.799087, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 7

[sub_resource type="Resource" id="Resource_v4dyx"]
script = ExtResource("2_83oct")
reload = false
ASCII = false
ASCIISize = Vector2(4, 9)
ChromaticAberration = false
StrenghtCA = 12.0
Blur = false
L_O_D = 1.0
FishEye = false
FishEyeAspect = 1.0
FishEyeDistortion = 1.0
FishEyeRadius = 1.0
FishEyeAlpha = 1.0
FishEyeCrop = 1.0
FishEyeCropColor = Color(0, 0, 0, 1)
Vignette = false
VignetteIntensity = 0.4
VignetteOpacity = 0.5
VignetteR_G_B = Color(0, 0, 0, 1)
Glitch = false
GlitchRange = 0.05
GlitchNoiseQuality = 250.0
GlitchIntenity = 0.031
GlitchOffset = 0.034
GlitchColorOffset = 2.03
Outline = false
OutlineColor = Color(0, 0, 0, 1)
OutlineThreshold = 0.0
OutlineBlend = 0.01
Grain = true
GrainPower = 150
CircularWaves = false
CircularWavesAmplitude = 2.0
CircularWavesFrequency = 12.69
CircularWavesRippleRate = 9.2
SpeedLines = true
SpeedLinesColor = Color(0.539863, 8.66354e-07, 1.92523e-07, 1)
SpeedLinesCount = 2
SpeedLineDensity = 0.098
SpeedLineSpeed = 28
particle_storm = false
particle_storm_color = Color(0.973371, 0.652369, 0.901698, 1)
particle_storm_intensity = 0.5
particle_storm_chaos = 1.0
particle_storm_scale = 1.0
particle_storm_density = 1.0
particle_storm_wind_direction = Vector2(0, 0)
particle_storm_wind_speed = 0.5
directional_drift = false
directional_drift_color = Color(0.76, 0.69, 0.5, 0.3)
directional_drift_density = 0.3
directional_drift_speed = 1.0
directional_drift_scale = 30.0
directional_drift_direction = Vector2(1, 0.5)
directional_drift_layer_ratio = 1.2
ColorCorrection = false
ColorCorrectionTint = Color(0, 0, 0, 1)
ColorCorrectionBrightness = 0.0
ColorCorrectionSaturation = 0.0
Palette = false
Pixelate = false
PixelatePixelSize = 8
CRT = false
overlay = false
scanlines_opacity = 0.4
scanlines_width = 0.25
grille_opacity = 0.3
pixelate = true
roll_speed = 8.0
roll_size = 15.0
roll_variation = 1.8
distort_intensity = 0.05
noise_opacity = 0.4
noise_speed = 5.0
static_noise_intensity = 0.06
aberration = 0.03
brightness = 1.4
discolor = true
warp_amount = 1.0
clip_warp = false
vignette_intensity = 0.4
vignette_opacity = 0.5
AnalogMonitor = false
AnalogMonitorResolution = Vector2(256, 256)
ScreenShake = false
ScreenShakePower = 0.1

[node name="PostProcessEffects" type="Node"]
script = ExtResource("1_24wkp")
speedLinesAnimationCurve = SubResource("Curve_b7wv0")
chromaticAberrationAnimationCurve = SubResource("Curve_cyi3g")
grainEffectTime = 1.0
grainAnimationCurve = SubResource("Curve_8cbf7")
stormAnimationCurve = SubResource("Curve_dwdq4")
glitchEffectTime = 0.4
glitchAnimationCurve = SubResource("Curve_vb36e")
glitchParams = ExtResource("2_dep2t")
targetConfig = SubResource("Resource_v4dyx")

[node name="GameplayPostProcess" parent="." instance=ExtResource("2_toebk")]

[node name="Timers" type="Node" parent="."]

[node name="SpeedLinesTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ChromaticAberrationTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="GrainTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="StormTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="GlitchTimer" type="Timer" parent="Timers"]
one_shot = true
